--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,23 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.App {
+  text-align: center;
+}
+
+.Container {
+  width: 250px;
+  height: 350px;
+  border: 1px solid gray;
+  margin: 10px;
+  /* controls my content: image, button, etc. */
+  display: flex; 
+  flex-direction: column;
+  align-items: center;    
+}
+
+ul
+{
+    list-style-type:none;
+}
