--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,8 @@ body {
   margin: 10px;
   display: flex; 
   flex-direction: column;
-  align-items: center;    
+  align-items: center;  
+  float: left;  
 }
 
 ul {
